[package]
name = "clu-middleware-tron"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]
bench = false

[dependencies]
async-channel = "2.5.0"
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive", "env"] }
clap-cargo = "0.18.3"
colored = "3.0.0"
env_logger = "0.11.8"
futures-lite = "2.6.1"
lapin = "3.7.2"
log = "0.4.28"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde-inline-default = "1.0.0"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
